--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@11ty/eleventy-navigation": "^0.1.6",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.0",
+    "contentful": "^8.3.7",
+    "dotenv": "^10.0.0",
     "luxon": "^1.26.0",
     "markdown-it": "^12.0.4",
     "markdown-it-anchor": "^7.1.0"
-  }
+  },
+  "dependencies": {}
 }
